# OliaIQ

./: .gitignore  __init__.py  main.py  pyproject.toml  requirements.txt  setup.ps1
data/analysis/: annual_national_trends.csv  annual_state_changes.csv  annual_state_outliers.csv  annual_state_trends.csv  monthly_national_trends.csv  monthly_state_changes.csv  monthly_state_outliers.csv  monthly_state_trends.csv
data/cache/: urllist_NJ.json  urllist_NY.json
data/climate_datasets/: climate_heat_precip_trends.csv  county_areas_2020.csv  county_elevations.csv  county_elevations_cleaned.csv  nyc_coastal_flooding_trends.csv
data/climate_datasets/cmip6/csv/: seasonal_climate_metrics.csv
data/climate_datasets/geographic_data/: county_elevations.csv
data/demographics_signal/: demographic_climate_signals.csv
data/hazardous_event_structural_signals/: structural_heat_index.csv
src/climate_dataset_preparation/: clean_county_elevations.py  create_flood_precip_reference.py  create_heat_reference.py  fetch_county_areas.py  get_dem.py  get_srtm.py  process_coastal_flooding.py
src/demographics_signal/: demographic_signal.py
src/hazardous_event_structural_damage/: flood_precip_signal.py  heat_signal.py  visualize_heat_risk.py
src/user_input/: address_mapper.py
src/valuation_adjustment/: valuation_adjustment.py
