[tool.poetry]
name = "OliaIQ-mvp"
version = "0.1.0"
description = "OliaIQ MVP - Climate and Property Analysis"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.20.0"
pandas = "^1.3.0"
xarray = "^0.20.0"
matplotlib = "^3.4.0"
requests = "^2.26.0"
netCDF4 = "^1.5.7"
scipy = "^1.7.0"
dask = "^2023.0.0"
distributed = "^2023.0.0"  # Dask's distributed scheduler
geopandas = "^0.14.0"  # For geographic data handling and visualization

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
black = "^22.0.0"
flake8 = "^4.0.0"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.flake8]
max-line-length = 88
extend-ignore = "E203"
